[metadata]
name = wordleanswer
version = 1.0.1
author = Sensor
author_email = sensoorr@hotmail.com
description = A package to get the Wordle answers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sensoorr/wordleanswer
project_urls =
    Bug Tracker = https://github.com/sensoorr/wordleanswer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src